@@ -6,6 +6,9 @@
 	that was removed by another object doesn't crash. We need
 	a new ownership model....
 
+	* pgp/seahorse-pgp-key.c: Register UIDs with the context. This
+	enables their IDs to be once again used over DBus. Fixes bug #570704
+	
 2009-02-04  Stef Walter  <stef@memberwebs.com>
 
 	* configure.in:
